Explore India's Top Influencer Marketing Agency Section alignment issue edited as per Karan's Audit

--- a/css/style.css
+++ b/css/style.css
@@ -1001,6 +1001,7 @@ ul {
   flex-direction: column;
   align-items: center;
   gap: 32px;
+  max-width: 400px;
 }
 
 /* .com-wrapper-right {
